==> SolderedElectronics/Inkplate-ESP-IDF-component/components/inkplate/src/boards/inkplate6/Inkplate6.cpp <==
#include "soc/i2s_struct.h"
#include "soc/gpio_sig_map.h"
#include "driver/gpio.h"
#include "esp_heap_caps.h"
#include "esp_adc/adc_oneshot.h"
#include "esp_adc/adc_cali.h"
#include "esp_adc/adc_cali_scheme.h"
#include "string.h"
#include "esp_log.h"
#include "Inkplate6.h"
#include "I2C.h"

uint32_t Inkplate6::partialUpdate(bool forced, bool leaveOn)
{
  // grayscale not supported
  if (m_displayMode == GRAYSCALE)
  {
  ESP_LOGI(TAG, "Selected display mode does not support partial updating.");
  return 0;
  }

  if (m_blockPartial && !forced)
  {
  display1b(leaveOn);
  return 0;
  }

  if (m_partialUpdateCounter >= m_partialUpdateLimiter && m_partialUpdateLimiter != 0)
  {
  ESP_LOGI(TAG, "Partial update limit reached, forcing full update.");
  // force full update
  display1b(leaveOn);
  // reset the counter
  m_partialUpdateCounter = 0;
  return 0;
  }

  uint16_t position = (E_INK_WIDTH * E_INK_HEIGHT / 8) - 1;
  uint32_t n = (E_INK_WIDTH * E_INK_HEIGHT / 4) - 1;
  uint8_t diffWhite, diffBlack;

  uint32_t changeCount = 0;

  m_dmaI2SDesc->size         = (E_INK_WIDTH / 4) + 16;
  m_dmaI2SDesc->length       = (E_INK_WIDTH / 4) + 16;
  m_dmaI2SDesc->sosf         = 1;
  m_dmaI2SDesc->owner        = 1;
  m_dmaI2SDesc->qe.stqe_next = 0;
  m_dmaI2SDesc->eof          = 1;
  m_dmaI2SDesc->buf          = m_dmaLineBuffer;
  m_dmaI2SDesc->offset       = 0;

  for (int i = 0; i < E_INK_HEIGHT; i++)
  {
  for (int j = 0; j < E_INK_WIDTH / 8; j++)
  {
    diffWhite = *(m_framebuffer + position) & ~*(m_newFramebuffer + position);
    diffBlack = ~*(m_framebuffer + position) & *(m_newFramebuffer + position);
    // count pixels turning from black to white as these are visible blur
    if (diffWhite)
    {
    for (int bv = 1; bv < 256; bv <<=1)
    {
      if (diffWhite & bv)
      changeCount++;
    }
    }

    position--;
    *(m_waveformBuffer + n) = LUTW[diffWhite >> 4] & LUTB[diffBlack >> 4];
    n--;
    *(m_waveformBuffer + n) = LUTW[diffWhite & 0x0F] & LUTB[diffBlack & 0x0F];
    n--;
  }
  }

  if (einkOn() != ESP_OK)
  return 0;

  uint8_t rep = 6;

  for (int k = 0; k < rep; k++)
  {
  vscanStart();
  n = (E_INK_WIDTH * E_INK_HEIGHT / 4) - 1;

  for (int i = 0; i < E_INK_HEIGHT; i++)
  {
    for (int j = 0; j < (E_INK_WIDTH / 4); j += 4)
    {
    m_dmaLineBuffer[j]     = *(m_waveformBuffer + n - 2);
    m_dmaLineBuffer[j + 1] = *(m_waveformBuffer + n - 3);
    m_dmaLineBuffer[j + 2] = *(m_waveformBuffer + n);
    m_dmaLineBuffer[j + 3] = *(m_waveformBuffer + n - 1);
    n -= 4;
    }
    sendDataI2S();
    vscanEnd();
  }
  esp_rom_delay_us(230);
  }

  clean(2, 2);
  clean(3, 1);
  vscanStart();

  if (einkOn() != ESP_OK)
  einkOff();

  memcpy(m_framebuffer, m_newFramebuffer, E_INK_WIDTH * E_INK_HEIGHT / 8);

  if (m_partialUpdateLimiter != 0)
  m_partialUpdateCounter++;

  return changeCount;
}

void Inkplate6::setFullUpdateThreshold(uint16_t numberOfPartialUpdates)
{
  m_partialUpdateLimiter = numberOfPartialUpdates;

  if (numberOfPartialUpdates != 0)
  m_blockPartial = true;
}

esp_err_t Inkplate6::display3b(bool leaveOn)
{
  esp_err_t ret = einkOn();
  if (ret != ESP_OK)
  {
  ESP_LOGI(TAG, "Display is not on!");
  return ret;
  }

  clean(0, 1);
  clean(1, 18);
  clean(2, 1);
  clean(0, 18);
  clean(2, 1);
  clean(1, 18);
  clean(2, 1);
  clean(0, 18);
  clean(2, 1);

  for (int k = 0; k < 9; ++k)
  {
  uint8_t *dp = m_framebufferColor + E_INK_WIDTH * E_INK_HEIGHT / 2;

  vscanStart();
  for (int i = 0; i < E_INK_HEIGHT; ++i)
  {
     for (int j = 0; j < (E_INK_WIDTH / 4); j += 4)
     {
      uint8_t p0, p1;

      p0 = *(--dp); p1 = *(--dp);
      m_dmaLineBuffer[j + 2] = (m_glut2[k * 256 + p0] | m_glut[k * 256 + p1]);
      p0 = *(--dp); p1 = *(--dp);
      m_dmaLineBuffer[j + 3] = (m_glut2[k * 256 + p0] | m_glut[k * 256 + p1]);
      p0 = *(--dp); p1 = *(--dp);
      m_dmaLineBuffer[j]     = (m_glut2[k * 256 + p0] | m_glut[k * 256 + p1]);
      p0 = *(--dp); p1 = *(--dp);
      m_dmaLineBuffer[j + 1] = (m_glut2[k * 256 + p0] | m_glut[k * 256 + p1]);
    }
    sendDataI2S();
    vscanEnd();
  }
  esp_rom_delay_us(230);
  }

  clean(3, 1);
  vscanStart();

  if (!leaveOn)
  einkOff();

  return ESP_OK;
}

esp_err_t Inkplate6::display1b(bool leaveOn)
{
  esp_err_t ret = einkOn();
  if (ret != ESP_OK)
  {
  ESP_LOGI(TAG, "Display is not on!");
  return ret;
  }

  clean(0, 1);
  clean(1, 18);
  clean(2, 1);
  clean(0, 18);
  clean(2, 1);
  clean(1, 18);
  clean(2, 1);
  clean(0, 18);
  clean(2, 1);

  memcpy(m_framebuffer, m_newFramebuffer, E_INK_WIDTH * E_INK_HEIGHT / 8);

  int rep = 5;

  for (int k = 0; k < rep; k++)
  {
  uint8_t *memoryPtr = m_newFramebuffer + (E_INK_WIDTH * E_INK_HEIGHT / 8) - 1;
  vscanStart();

  for (int i = 0; i < E_INK_HEIGHT; i++)
  {
    for (int j = 0; j < (E_INK_WIDTH / 4); j += 4)
    {
    uint8_t dram1 = *(memoryPtr);
    uint8_t dram2 = *(memoryPtr - 1);
    m_dmaLineBuffer[j]     = LUTB[(dram2 >> 4) & 0x0F];
    m_dmaLineBuffer[j + 1] = LUTB[dram2 & 0x0F];
    m_dmaLineBuffer[j + 2] = LUTB[(dram1 >> 4) & 0x0F];
    m_dmaLineBuffer[j + 3] = LUTB[dram1 & 0x0F];
    memoryPtr -= 2;
    }
    sendDataI2S();
    vscanEnd();
  }
  esp_rom_delay_us(230);
  }

  for (int k = 0; k < 1; ++k)
  {
  uint8_t *memoryPtr = m_newFramebuffer + (E_INK_WIDTH * E_INK_HEIGHT / 8) - 1;
  vscanStart();

  for (int i = 0; i < E_INK_HEIGHT; i++)
  {
    for (int j = 0; j < (E_INK_WIDTH / 4); j += 4)
    {
    uint8_t dram1 = *(memoryPtr);
    uint8_t dram2 = *(memoryPtr - 1);
    m_dmaLineBuffer[j]     = LUT2[(dram2 >> 4) & 0x0F];
    m_dmaLineBuffer[j + 1] = LUT2[dram2 & 0x0F];
    m_dmaLineBuffer[j + 2] = LUT2[(dram1 >> 4) & 0x0F];
    m_dmaLineBuffer[j + 3] = LUT2[dram1 & 0x0F];
    memoryPtr -= 2;
    }
    sendDataI2S();
    vscanEnd();
  }
  esp_rom_delay_us(230);
  }

  for (int k = 0; k < 1; ++k)
  {
  vscanStart();

  for (int i = 0; i < E_INK_HEIGHT; i++)
  {
    for (int j = 0; j < (E_INK_WIDTH / 4); j += 4)
    {
    m_dmaLineBuffer[j]     = 0;
    m_dmaLineBuffer[j + 1] = 0;
    m_dmaLineBuffer[j + 2] = 0;
    m_dmaLineBuffer[j + 3] = 0;
    }
    sendDataI2S();
    vscanEnd();
  }
  esp_rom_delay_us(230);
  }

  vscanStart();
  if (!leaveOn)
  einkOff();

  m_blockPartial = false;
  return ESP_OK;
}

void Inkplate6::clean(uint8_t c, uint8_t rep)
{
  einkOn();
  uint8_t data = 0;
  if (c == 0)
  data = 0b10101010;
  else if (c == 1)
  data = 0b01010101;
  else if (c == 2)
  data = 0b00000000;
  else if (c == 3)
  data = 0b11111111;

  for (int i = 0; i < (E_INK_WIDTH / 4); i++)
  m_dmaLineBuffer[i] = data;

  m_dmaI2SDesc->size         = (E_INK_WIDTH / 4) + 16;
  m_dmaI2SDesc->length       = (E_INK_WIDTH / 4) + 16;
  m_dmaI2SDesc->sosf         = 1;
  m_dmaI2SDesc->owner        = 1;
  m_dmaI2SDesc->qe.stqe_next = 0;
  m_dmaI2SDesc->eof          = 1;
  m_dmaI2SDesc->buf          = m_dmaLineBuffer;
  m_dmaI2SDesc->offset       = 0;

  for (int k = 0; k < rep; ++k)
  {
  vscanStart();

  for (int i = 0; i < E_INK_HEIGHT; ++i)
  {
    sendDataI2S();
    vscanEnd();
  }

  esp_rom_delay_us(230);
  }
}
